# transitwind

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  pyproject.toml  render.yaml  transitwind.code-workspace
.claude/: settings.local.json
.claude/commands/: adr.md  ship.md
backend/app/: auth.py  config.py  database.py  main.py  models.py  schemas.py  seed.py
backend/app/data/: centers.json  channels.json  gates.json  wheel.py
backend/app/routers/: auth.py  chart.py  interpret.py  journal.py  transit.py  user.py
backend/app/services/: chart.py  ephemeris.py  interpreter.py  overlay.py  transit.py
backend/tests/: conftest.py  test_auth.py  test_chart.py  test_user.py
docs/: ui_reference.md
docs/adr/: 001-use-adrs.md  002-fastapi-react-monorepo.md  003-swiss-ephemeris.md  004-gemini-ai-interpretations.md  005-bisection-algorithm.md  006-transit-tools-consolidation.md  007-interpretation-caching.md  008-countdown-timestamps.md  009-static-files-serving.md  010-stateless-token-refresh.md  011-test-infrastructure-inmemory-sqlite.md  README.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/components/: Bodygraph.tsx  DailyView.tsx  EphemerisCalendar.tsx  GateTracker.tsx  Journal.tsx  Login.tsx  Onboarding.tsx  Profile.tsx  TransitTools.tsx  UpcomingChanges.tsx
